--- a/Assets/Game/Game.asmdef
+++ b/Assets/Game/Game.asmdef
@@ -7,7 +7,8 @@
         "ME.ECS.Serializer",
         "ME.ECS.IL2CPP",
         "Unity.Collections",
-        "ME.ECS.Markers"
+        "ME.ECS.Markers",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
