--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.me.ecs": "https://github.com/chromealex/ecs-submodule.git",
+    "com.me.ecs.essentials.globalevents": "https://github.com/chromealex/me.ecs-globalevents.git",
     "com.me.ecs.essentials.input": "https://github.com/chromealex/me.ecs-input.git",
     "com.me.ecs.markers": "https://github.com/chromealex/me.ecs-markers.git",
     "com.me.ecs.transform": "https://github.com/chromealex/me.ecs-transform.git",
