--- a/Assets/Game/Game.asmdef
+++ b/Assets/Game/Game.asmdef
@@ -8,7 +8,8 @@
         "ME.ECS.IL2CPP",
         "Unity.Collections",
         "ME.ECS.Markers",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "ME.ECS.Essentials.GlobalEvents"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
